[package]
name = "yew-tutorial"
version = "0.1.0"
authors = ["Samuel Brolia <samuel_brolia@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.12"
rand = { version = "0.7", features = ["wasm-bindgen"] }
serde = "1.0"